# stm32-barebones

./: .gdbinit  .gitmodules  CMakeLists.txt
src/: blinky.c  blinky.cc  stm32f4_freertos.c  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h
